# swimtool

./: .gitignore  README.md  meson.build  swimtool-disable-slot2.service  swimtool-disable-slot2.sh
include/swimtool/: radio_config_compat.h  status_types.h
rpm/: swimtool.spec
src/: main.c  main.cpp
